--- a/src/components/login/LogoAside.module.css
+++ b/src/components/login/LogoAside.module.css
@@ -1,7 +1,7 @@
 .container {
 	width: 20%;
 	height: 100vh;
-	background-image:linear-gradient(180deg, #628890 0%, rgba(98, 136, 144, 0) 100%);
+	background-image:linear-gradient(180deg, #407BFF 0%, rgba(98, 136, 144, 0) 100%);
 	display: flex;
 	align-items: center;
 }
