--- a/src/components/dashboard/BarTop.module.css
+++ b/src/components/dashboard/BarTop.module.css
@@ -1,5 +1,6 @@
 .barTop {
 	background-color: #407BFF;
+	width: 100%;
 	grid-column: 2/4;
 	display: flex;
 	justify-content: space-between;
@@ -17,7 +18,6 @@
 	font-size: 2rem;
 	font-weight: bold;
 	color: white;
-
 }
 
 .hamburguer {
