--- a/src/components/dashboard/HomeScreen.module.css
+++ b/src/components/dashboard/HomeScreen.module.css
@@ -2,6 +2,7 @@
 	background-color: white;;
 	grid-column: 2/3;
 	padding: 10px;
+	height: 100%;
 }
 
 .welcome {
@@ -30,10 +31,48 @@
 	width: 100%;
 }
 
+.image {
+	display: flex;
+}
+.image img {
+	max-height: 270px;
+	max-width: 302px;
+	width: 100%;
+	height: 270px;
+}
+
 .cards {
 	margin-top: 20px;
 	width: 100%;
-	display: flex;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 316px));
+	grid-gap: 20px;
 	flex-wrap: wrap;
+}
+
+
+@media (max-width: 782px) {
+
+	.welcome {
+		flex-direction: column;
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	 .phrase {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+	}
+	.image {
+		justify-content: center;
+	}
+
+	.cards {
+		max-height: 350px;
+		overflow: auto;
+	}
 }
