--- a/src/components/dashboard/HomeScreen.module.css
+++ b/src/components/dashboard/HomeScreen.module.css
@@ -38,7 +38,7 @@
 	max-height: 270px;
 	max-width: 302px;
 	width: 100%;
-	height: 270px;
+	height: 100%;
 }
 
 .cards {
@@ -50,9 +50,15 @@
 	flex-wrap: wrap;
 }
 
+@media (max-width: 855px) {
+	.cards {
+		height: 45vh;
+		overflow: scroll;
+		padding-bottom: 100px;
+	}
+}
 
 @media (max-width: 782px) {
-
 	.welcome {
 		flex-direction: column;
 		width: 100%;
@@ -66,13 +72,20 @@
 		align-items: center;
 		justify-content: center;
 		flex-direction: column;
+		height: 20%;
 	}
 	.image {
 		justify-content: center;
+		height: 80%;
+	}
+}
+
+@media (max-width: 760px) {
+	.HomeScreen {
+		grid-column: 1/4;
 	}
 
-	.cards {
-		max-height: 350px;
-		overflow: auto;
+	.welcome, .cards {
+		height: calc(40vh - 10px);
 	}
 }
