--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -4,4 +4,12 @@
 	grid-template-rows: 10vh 90vh;
 	grid-gap: 10px;
 	width: 100%;
+	overflow: hidden;
+}
+
+@media (max-width: 760px) {
+	.container {
+		grid-template-rows: 10vh 10vh 80vh;
+		grid-template-columns: 4fr;
+	}
 }
