--- a/src/components/stock/Product.module.css
+++ b/src/components/stock/Product.module.css
@@ -10,11 +10,15 @@
 	align-items: center;
 	gap: 10px;
 }
+.imageProduct {
+	display: flex;
+	align-items: center;
+	width: 100px;
+	height: 90px;
+}
 .imageProduct img {
 	width: 100%;
 	height: 100%;
-	max-width: 60px;
-	max-height: 54px ;
 }
 
 .item .quantity {
@@ -48,4 +52,3 @@
 .item .buttons .remove:hover {
 	background-color: #FF000050;
 }
-
