--- a/src/components/stock/Content.module.css
+++ b/src/components/stock/Content.module.css
@@ -1,19 +1,27 @@
-.ContentStock {
+.contentStockOpacity {
+	background: rgba(#000, .4);
+	filter: blur(2px);
+}
+
+.contentStock,
+.contentStockOpacity {
 	background-color: white;;
 	grid-column: 2/3;
 	padding: 10px;
 	height: 100%;
-
 }
-.ContentStock header {
+.contentStock header,
+.contentStockOpacity header {
 	padding-bottom: 10px;
 	display: flex;
 	justify-content: space-between;
 }
-.ContentStock header h2 {
+.contentStockOpacity .title,
+.contentStock .title {
 	font-size: 2rem;
 }
-.ContentStock header button {
+.contentStockOpacity .createProduct button,
+.contentStock .createProduct button {
 	border: none;
 	padding: 10px;
 	font-size: 1.6rem;
@@ -21,8 +29,12 @@
 	font-weight: bold;
 	cursor: pointer;
 	background-color: #0085FF;
+	display: flex;
+	align-items: center;
+	gap: 5px;
 }
-.ContentStock header button:hover {
+.contentStockOpacity .createProduct button:hover,
+.contentStock .createProduct button:hover {
 	background-color: #0085FF50;
 }
 
@@ -38,7 +50,7 @@
 	padding: 10px;
 	text-align: left;
 	border-spacing: 0;
-
+	min-width: 200px;
 }
 
 .table .title {
@@ -62,9 +74,13 @@
 	text-align: center;
 }
 
+.table {
+	padding-bottom: 100px;
+}
+
 
 @media (max-width: 760px) {
-	.ContentStock {
+	.contentStock, .contentStockOpacity {
 		grid-column: 1/4;
 	}
 }
