--- a/src/components/stock/ModalCreateProduct.module.css
+++ b/src/components/stock/ModalCreateProduct.module.css
@@ -1,8 +1,9 @@
-.modalUpdateFalse {
+.modalCreateFalse {
 	display: none;
 }
 
-.modalUpdate {
+.modalCreate {
+	border-radius: 15px;
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -15,21 +16,6 @@
 	height: 100%;
 	width: 100%;
 	overflow: auto;
-}
-
-.productImage {
-	margin-bottom: 50px;
-}
-.productImage div{
-	background-color: black;
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	margin: 0 auto;
-}
-.productImage div img {
-	width: 100%;
-	height: 100%;
 }
 
 form {
@@ -49,6 +35,7 @@ form {
 	border-bottom: 1px solid #407BFF;
 	font-size: 1.6rem;
 	padding: 10px;
+
 }
 .inputBox input::placeholder{
 	color: #407BFF;
