--- a/src/components/stock/Product.module.css
+++ b/src/components/stock/Product.module.css
@@ -17,8 +17,8 @@
 	height: 90px;
 }
 .imageProduct img {
-	width: 100%;
-	height: 100%;
+	min-width: 100%;
+	min-height: 100%;
 }
 
 .item .quantity {
