--- a/src/components/dashboard/LogoTop.module.css
+++ b/src/components/dashboard/LogoTop.module.css
@@ -1,6 +1,6 @@
 .logoTop {
 	padding: 10px;
-	background-color: #407BFF;
+	background-color:  #222d32;;
 	text-align: center;
 	grid-column: 1/2;
 }
