--- a/src/components/dashboard/ItemList.module.css
+++ b/src/components/dashboard/ItemList.module.css
@@ -1,3 +1,4 @@
+.itemListSelected,
 .itemList {
 	padding: 10px;
 	position: relative;
@@ -5,17 +6,22 @@
 	align-items: center;
 	transition: 0.4s;
 }
+.itemListSelected {
+	background-color: #1a2226;;
+}
+.itemListSelected img,
 .itemList img {
 	width: 24px;
 	height: 20px;
 }
+.itemListSelected span,
 .itemList span {
 	font-weight: 300;
 	font-size: 2rem;
 	color: white;
 	padding-left: 5px;
 }
-.itemList::before {
+.itemListSelected::before {
 	content: '';
 	position: absolute;
 	bottom: 0;
@@ -24,6 +30,7 @@
 	width: 5px;
 	background-color: #00C2FF;
 }
+.itemListSelected:hover,
 .itemList:hover {
 	cursor: pointer;
 	background-color: #1a2226;
